Crear Usuario, Datos usuario. Listar. Se medio organizan rutas.

--- a/public/css/estiloX.css
+++ b/public/css/estiloX.css
@@ -10,6 +10,16 @@
 /*.container-fluidX{padding: 0px 0px 0px 0px;
 margin: 0px 0px 0px 0px;
 }*/
+/*--------  BACKEND ------*/
+/*--------  BACKEND ------*/
+/*--------  BACKEND ------*/
+.tablex {};
+#tableX td{
+    text-align:center !important;
+    height: 10px;
+}
+
+
 
 
 /* GlobaleX--------------------------#E0E0E0---*/
