--- a/public/css/estiloX.css
+++ b/public/css/estiloX.css
@@ -128,13 +128,16 @@ html, body, fieldset, pre, .h1X {
 /*------------------HEADER bienvenida----------------------*/
 .bienvenida{
         position: absolute;
-    background-color: rgba(10, 10, 10,.2);
+    background-color: rgba(10, 10, 10,.2) ;
     /* height: 10px; */
-    top: 20px;
+    top: 20px !important;
 /*    width: 500px;*/
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     
+}
+#backrgbX{
+    background-color: rgba(10, 10, 10,.2) ;
 }
 .bienvenida h2{
     font-size: 20px;
@@ -299,7 +302,7 @@ img.slidesjs-slide{
 }
 .contentImg{
   position: absolute;
-  height: 100px;
+  height: 120px;
   right: 0px;
   margin-top: -60px;
   margin-right: 100px;
