--- a/public/css/estiloX.css
+++ b/public/css/estiloX.css
@@ -13,12 +13,122 @@ margin: 0px 0px 0px 0px;
 /*--------  mODULOS ------*/
 /*--------  mODULOS ------*/
 /*--------  SITIOS------*/
- #map {
+    
+  /*---------ver sitio-------------*/
+  /*---------ver sitio-------------*/
+  /*---------ver sitio-------------*/
+      
+ #map {position:relative;
         width: 500px;
         height: 400px;
         margin-top: 10px;
       }
-/*-------- FIN SITIOS------*/
+      #directions {
+      position:relative;
+      top: 300px;
+    width: 38%;
+    float: right; }
+      
+      .rutacont{
+             /* display: none; */
+    position: relative;
+    display: inline;
+    /* left: 490px; */
+    /* top: 600px; */
+    width: 400px;
+          
+      }      
+      #fbshare{
+  position: relative;
+    top: -22px;
+    }
+  .dircont{
+          display: inline;
+    width: 450px;
+  }
+      
+  .descricont{
+    position:relative;  
+    height: 100%
+  }
+  .diruti{
+/*      position: relative;
+    top: 130px;*/
+padding: 0px 20px 0px 20px;
+  }
+  #directions-panel {
+    
+    width: 450px !important;
+  }
+  .adp-substep .adp-stepicon {
+    
+    background-color: lightcyan !important;
+    border-radius: 2.5px ;
+    width: 17px !important;
+    height: 17px !important;
+}
+
+  
+.timeDie{
+        position: relative;
+    display: inline;
+    float: right;
+    padding-right: 26%
+}
+  
+      
+/*-------- traductor------*/
+/*.translator-widget{
+    position:relative;
+    width:180px;
+    padding:0;
+    margin:0 auto
+}
+.translator{
+    position:absolute;
+    top:0;
+    left:0;
+    text-align:center;
+    width:100%;
+    height:29px;
+    line-height:29px;
+    border:1px solid #333;
+    background:#555;
+    color:#efefef;
+    cursor:pointer
+}
+.translator:hover{
+    background:#777
+}
+.widget-translator{
+    display:none;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:29px;
+    border:1px solid #333;
+    background:#555;
+}
+.close-translator{
+    position:absolute;
+    font-size:12px;
+    color:red;
+    top:6px;
+    right:5px;
+    cursor:pointer;
+    font-weight:400;
+}*/
+
+
+
+.goog-te-gadget img {
+   
+    display: none;
+}
+/*-------- FIN traductor------*/
+
+
 /*-------- FIN mODULOS ------*/
 
 
@@ -63,10 +173,15 @@ body *{
 body{
   z-index: -999;
   background-color: black;
-
+height: 100%
 }
 
-
+div#ui-datepicker-div{
+    z-index: 1 !important;
+}
+.ui-datepicker th{
+    color: black !important
+}
 
 .rowX{position: absolute;
       width: 100%;
@@ -114,6 +229,11 @@ html, body, fieldset, pre, .h1X {
            width: 100%;
 }
 
+.relativeX{
+    position: relative;
+    
+}
+
 .displayLine{position: absolute;
              display:inline-block}
 .heightX{height:10px}
@@ -149,6 +269,35 @@ html, body, fieldset, pre, .h1X {
 /*------------------HEADER----------------------*/
 /*------------------HEADER----------------------*/
 
+/*------------  traductor --------------------*/
+/*#google_translate_element{
+
+    
+}*/
+#google_translate_element {
+      position: absolute;
+    padding: 8px 20px 20px 20vw;
+    left: 400px;
+    margin: 2px 0 0 2px;
+    width: 20px;
+}
+.goog-te-gadget-simple span{
+    color:rgba(255,255,255,.3);
+        border: 0 !important;
+}
+.goog-te-gadget-simple span:hover{
+    color:white;
+        border: 0 !important;
+}
+.goog-te-gadget-simple{
+    background-color: transparent !important;
+    border: 0 !important;
+/*    padding: 10px 25% 0% 15vw;*/
+    
+}
+.goog-te-gadget-simple .goog-te-menu-value {
+    color: white;
+}
 
 /*------------------HEADER bienvenida----------------------*/
 .bienvenida{
