--- a/public/css/styleD.css
+++ b/public/css/styleD.css
@@ -9,14 +9,14 @@ and open the template in the editor.
 */
 
 /* 
-    !!!! (PANELCONTROL)Ã‚Â¡Ã‚Â¡Ã‚Â¡
+    !!!! (PANELCONTROL)Ãƒâ€šÃ‚Â¡Ãƒâ€šÃ‚Â¡Ãƒâ€šÃ‚Â¡
 */
 .tablePanel{
   transform: translate(400px, -300px);
 }
 
 /*
-    !!!!TABLA (PANELCONTROL)Ã‚Â¡Ã‚Â¡Ã‚Â¡
+    !!!!TABLA (PANELCONTROL)Ãƒâ€šÃ‚Â¡Ãƒâ€šÃ‚Â¡Ãƒâ€šÃ‚Â¡
 */
 .tablon{
   transform: translate(-15%, 16%);
@@ -112,36 +112,94 @@ and open the template in the editor.
 }
 
 .thumbnail{
-    margin-bottom: 50px;
-    margin-left: 20px;
-    background-color: #000 ;
-    width: 1300px;
-    height: 700px;
+    background-color: transparent ;
+    border-color: transparent ;   
+/*    height: 100%;*/
+margin-bottom: 100px;
 }
 .thumbnail h3{
     text-align:center ;
     color: lightcyan ;
 }
 .thumbnail p{
+  position: static ;
     color : lightcyan ;
 }
 
-.thumbnail table{
-    transform: translate(800px , -100px);
-    width: 20em;
-    height: 5em;     
+
+.contenedor-imgAlz{    
+    width: 100%;
+/*height: fit-content;*/
+position: relative;
+/*display: inline;*/
+/*margin-bottom: 130px;*/
 }
+
+.contenedor-imgAl{    
+    /*width: 100%;*/
+/*height: fit-content;*/
+position: relative;
+/*display: inline;*/
+margin-bottom: 130px;
+}
+.contenedor-imgAlz h2, .contenedor-imgAl h2{
+     text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  font-size: 17px;
+  padding: 10px;
+  background: #333333;
+  margin: 20px 0 0 0
+}
+
+.contenedor-imgAlz h5, .contenedor-imgAl h5{
+    color: lightcyan;
+   width: 700px;
+   height: 30px;  
+}
+.contenedor-imgAlz h4, .contenedor-imgAl h4{
+    color: lightcyan;
+    width: 400px;
+    height: fit-content;
+}
+
+.contenedor-imgAlz a, .contenedor-imgAl a{
+float: left;
+}
+.contenedor-imgAlz table, .contenedor-imgAl .tablx{
+     height: 3em;
+ width: 15em;
+ position:relative;
+  right: -1em;
+  top: 2em;
+  border-style: groove ;
+}
+
+.contenedor-imgAlz th, .contenedor-imgAl th{
+     color: lightcyan;     
+}
+
+.contenedor-imgAlz td, .contenedor-imgAl td{
+    color: #00ABEB;
+}
+
 .imgDieg{
-    width: 430px;
+    width: 370px;
     float:left ;
    padding-left:15px;
    padding-right: 10px; 
    margin-top:40px;
    margin-bottom:50px ;
+   margin-right: 10px;
    border-radius: 25px 25px 25px 25px;
-   }
+border-style: dotted ;
+border-width: 2px;
+border-color: lightcyan ;
+}
+   
    .imgDieg2{
-    width: 430px;
+    width: 400px;
     float:left ;
    padding-left:15px;
    padding-right: 10px; 
@@ -150,17 +208,50 @@ and open the template in the editor.
    border-radius: 25px 25px 25px 25px;   
    }
    .imgDieg3{
-    width: 430px;
+    width: 370px;
     float:left ;
    padding-left:15px;
    padding-right: 10px; 
    margin-top:40px;
    margin-bottom:50px ;
+   margin-right: 10px;
    border-radius: 25px 25px 25px 25px;   
+border-style: dotted ;
+border-width: 2px;
+border-color: lightcyan ;
    }
    
-   .texxt{
-       float: bottom ;
-   }
 
+.botoni:hover {
+    border-radius:25px 25px 25px 25px;
+    transition:all .3s ease-out;
+    box-shadow: 0px 0px 5px #000; 
+    /* tamaÃ±o y color de la sombra */
+    -moz-transition: all .5s;-webkit-transition: all .5s;-o-transition: all .5s;}
+.botoni{
+    transition:all .3s ease-out;
+    -moz-transition: all .5s;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    cursor:pointer;
+    margin-left:10px;
+    /* espacio entre cada boton */}
 
+/*.timeDie{
+     height: 3em;
+     width: 30em; 
+    position: relative;
+    display: inline;
+     top: -15em; 
+     right: -43em; 
+    float: right;
+}*/
+
+.timeDie a{ 
+    font-size: 23px !important;
+    cursor: default;    
+}
+.timeDie span{ 
+    
+    cursor: default !important;    
+}
